# OpenModelicaEmbedded

./: ArduinoExamples.mo  Boards.mo  Examples.mo  GettingStarted.mo  Internal.mo  Pins.mo  README.md  README.md~  package.mo  package.order
Firmware/Arduino/pidmata3/: pidmata3.ino
Firmware/Tiva C/StandardFirmata/: Boards.h
OpenModelicaArduino/: .package.mo.swp  ArduinoExamples.mo  package.mo  package.order
OpenModelicaArduino/Firmware/Tiva C/StandardFirmata/: Servo.h  StandardFirmata.ino  pinout_tm4c123g.txt
OpenModelicaArduino/Firmware/pidmata3/: pidmata3.ino
OpenModelicaArduino/Resources/Include/: modelPlugFirmata.h  modelPlugFirmata.h~
OpenModelicaArduino/Source/: CMakeCache.txt~  modelPlugFirmata.cpp
Resources/Images/: Thumbs.db
Source/: CMakeCache.txt  CMakeLists.txt  Makefile  Makefile~  README  cmake_install.cmake  modelPlugFirmata.cpp  modelPlugFirmata.cpp~  modelPlugFirmata.h  serial.cpp  serial.h
